fix: fixed cookbook

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="text_view_ingredient_unit">Unit</string>
     <string name="text_view_ingredient_proportion">Prop. Count</string>
     <string name="button_ok">OK</string>
+    <string name="recipe_activity_empty_view">Add an ingredient!</string>
 
     <!--RecipeActivity Menu-->
     <string name="action_edit">Edit</string>
