--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Bei Recipes</string>
+    <string name="file_authority">com.dmtaiwan.alexander.beirecipes.fileprovider</string>
 
     <!--RecipeActivity-->
     <string name="edit_text_quantity">Quantity</string>
